# inventory-managment-app

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: manage.py
src/atmio/inventory/: apps.py  models.py  urls.py  views.py
src/atmio/inventory/migrations/: 0001_initial.py  0002_alter_component_id_alter_component_inventory_level_and_more.py  0003_seed_sample_data.py
src/atmio/inventory/templates/: base.html
src/atmio/inventory/templates/atmio/inventory/: component_form.html  component_list.html  component_table.html
src/atmio_inventory/: asgi.py  settings.py  urls.py  wsgi.py
src/inventory_manager/: apps.py  forms.py  models.py  urls.py  views.py
src/inventory_manager/migrations/: 0001_initial.py  0002_seed_example_data.py
src/inventory_manager/services/: inventory.py
src/inventory_manager/templates/inventory_manager/: component_form.html  component_list.html  component_table.html
src/web/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  pytest.ini  test_views.py
